--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,10 @@ nav ul a:hover {
   margin-top: 1rem;
 }
 
+.sidenav {
+  width: 200px;
+}
+
 p {
   line-height: 2rem;
 }
@@ -172,6 +176,10 @@ p {
 }
 
 @media only screen and (max-width : 320px) {
+  nav .brand-logo {
+    font-size: 1.5em !important;
+  }
+
   .row .col.s12 h3 {
     margin: -1rem 0 0.5rem 0;
     font-size: 2.4em;
@@ -188,6 +196,10 @@ p {
 }
 
 @media only screen and (max-width : 420px) {
+  nav .brand-logo {
+    font-size: 1.75em;
+  }
+
   .row .col.s12 h3 {
     margin: -1rem 0 0.5rem 0;
   }
