--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
  * Made By MaterializeCSS.com
 
  */
+ 
+.h1pagetitle {
+   font-weight: bold;
+   margin: 1.9466666667rem 0 0.5rem 0;
+   color: black;
+   font-size: 2.92rem;
+   line-height: 110%;
+ }
 
  h4.iconsHeader {
    margin-top: 3rem;
@@ -160,9 +168,9 @@ p {
     font-size: 1.5em !important;
   }
 
-  .row .col.s12 h3 {
-    margin: -1rem 0 0.5rem 0;
-    font-size: 2.4em;
+  .h1pagetitle {
+    margin: 1rem 0 0.5rem 0 !important;
+    font-size: 2.4em !important;
   }
 
   h4.helloBlockText {
@@ -180,8 +188,9 @@ p {
     font-size: 1.75em;
   }
 
-  .row .col.s12 h3 {
-    margin: -1rem 0 0.5rem 0;
+  .h1pagetitle {
+    margin: 1rem 0 0.5rem 0;
+	font-size: 2.7rem;
   }
 
   .row .col.s12 h4 {
