--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,28 @@
 /* Custom Stylesheet */
+.text-block {
+  width: 250px;
+  margin: 50px;
+}
+
+#go-top {
+  position: fixed; 
+  font-family: sans-serif;
+  line-height: 30px;
+  text-align: center;
+  color: #fff;
+  bottom: 25px; 
+  right: 10px; 
+  cursor:pointer; 
+  display:none;
+  width: 70px;
+  height: 30px;
+  background: #c0c0c0;
+  border-radius: 5px;
+}
+
+#go-top:hover {
+  background: #333;
+}
 /**
  * Use this file to override Materialize files so you can update
  * the core Materialize files in the future
